--- a/installer/Makefile
+++ b/installer/Makefile
@@ -1,42 +1,42 @@
-LIBPS4	:=	../ps4-payload-sdk/libPS4
+LIBPS4  := $(PS4SDK)/libPS4
 
-CC	:= gcc
-OBJCOPY	:= objcopy
-ODIR	:= build
-SDIR	:= source
-IDIRS	:= -I$(LIBPS4)/include -Iinclude
-LDIRS	:= -L$(LIBPS4)
+CC      := gcc
+OBJCOPY := objcopy
+RM      := rm
+ODIR    := build
+SDIR    := source
+IDIRS   := -I$(LIBPS4)/include -Iinclude
+LDIRS   := -L$(LIBPS4)
 MAPFILE := $(shell basename "$(CURDIR)").map
-CFLAGS	:= $(IDIRS) -Os -std=c11 -ffunction-sections -fdata-sections -fno-builtin -nostartfiles -nostdlib -Wall -Wextra -masm=intel -march=btver2 -mtune=btver2 -m64 -mabi=sysv -mcmodel=small -fpie -fPIC
-LFLAGS	:= $(LDIRS) -Xlinker -T $(LIBPS4)/linker.x -Xlinker -Map="$(MAPFILE)" -Wl,--build-id=none -Wl,--gc-sections
-CFILES	:= $(wildcard $(SDIR)/*.c)
-SFILES	:= $(wildcard $(SDIR)/*.s)
-OBJS	:= $(patsubst $(SDIR)/%.c, $(ODIR)/%.o, $(CFILES)) $(patsubst $(SDIR)/%.s, $(ODIR)/%.o, $(SFILES))
+CFLAGS  := $(IDIRS) -Os -std=c11 -ffunction-sections -fdata-sections -fno-builtin -nostartfiles -nostdlib -Wall -Wextra -masm=intel -march=btver2 -mtune=btver2 -m64 -mabi=sysv -mcmodel=small -fpie -fPIC
+LFLAGS  := $(LDIRS) -Xlinker -T $(LIBPS4)/linker.x -Xlinker -Map="$(MAPFILE)" -Wl,--build-id=none -Wl,--gc-sections
+CFILES  := $(wildcard $(SDIR)/*.c)
+SFILES  := $(wildcard $(SDIR)/*.s)
+OBJS    := $(patsubst $(SDIR)/%.c, $(ODIR)/%.o, $(CFILES)) $(patsubst $(SDIR)/%.s, $(ODIR)/%.o, $(SFILES))
 
+LIBS    := -lPS4
 
-LIBS	:= -lPS4
+TARGET  := $(shell basename "$(CURDIR)").bin
 
-TARGET = $(shell basename $(CURDIR)).bin
+.PHONY: all clean
 
-# Default value for FW if not set
-FW ?= 0
-CFLAGS += -DFW=$(FW)
+all: $(TARGET)
 
 $(TARGET): $(ODIR) $(OBJS)
 	$(CC) $(LIBPS4)/crt0.s $(ODIR)/*.o -o temp.t $(CFLAGS) $(LFLAGS) $(LIBS)
 	$(OBJCOPY) -O binary temp.t "$(TARGET)"
-	rm -f temp.t
+	$(RM) -f temp.t
 
-$(ODIR)/%.o: $(SDIR)/%.c
+$(ODIR)/%.o: $(SDIR)/%.c | $(ODIR)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-$(ODIR)/%.o: $(SDIR)/%.s
+$(ODIR)/%.o: $(SDIR)/%.s | $(ODIR)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(ODIR):
-	@mkdir $@
-
-.PHONY: clean
+	@mkdir -p $@
 
 clean:
-	rm -rf $(TARGET) $(MAPFILE) $(ODIR)
+	$(RM) -rf "$(TARGET)" "$(MAPFILE)" $(ODIR)
+
+.INTERMEDIATE: temp.t
