--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 /.vscode/
 
 /installer/build/
+/installer/include/*.inc
 /installer/*.bin
 /installer/*.map
+
 
 /kpayload/build/
 /kpayload/*.bin
 /kpayload/*.map
+
+/tmp/
 
 /hen.bin
