Download plugins only once and generate bundled plugins to translation units

--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -26,7 +26,7 @@ jobs:
         uses: Scene-Collective/ps4-payload-sdk@main
         with:
           app_path: .
-          build_command: sh build.sh
+          build_command: bash build.sh
       - name: Upload payload artifact
         id: upload
         uses: actions/upload-artifact@main
