--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 /.vscode/
 
 /installer/build/
-/installer/include/*.inc
+/installer/source/**.prx.c
 /installer/*.bin
 /installer/*.map
 
 /kpayload/build/
 /kpayload/*.bin
 /kpayload/*.map
+
+**/*.bak
 
 /tmp/
 
