--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -1,25 +1,63 @@
----
 name: "Sanity Check"
 
 on:
-  workflow_dispatch:
   push:
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.txt"
   pull_request:
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.txt"
+  workflow_dispatch:
+
+env:
+  hen-bin: hen.bin
 
 jobs:
   build:
-    if: github.ref_type != 'tag'
     runs-on: ubuntu-latest
+    outputs:
+      artifact-id: ${{ steps.upload.outputs.artifact-id }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
       - name: Build with PS4 Payload SDK
         uses: Scene-Collective/ps4-payload-sdk@main
         with:
           app_path: .
           build_command: sh build.sh
       - name: Upload payload artifact
-        uses: actions/upload-artifact@v4
+        id: upload
+        uses: actions/upload-artifact@main
         with:
-          name: hen.bin
-          path: hen.bin
+          name: ${{ env.hen-bin }}
+          path: ${{ env.hen-bin }}
+
+  release:
+    needs: build
+    permissions:
+      contents: write
+      actions: write
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@main
+
+      - name: Download artifacts
+        uses: actions/download-artifact@main
+        with:
+          name: ${{ env.hen-bin }}
+          path: .
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ github.ref_name }} ${{ env.hen-bin }} --clobber
+      - name: Delete uploaded artifact
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh api --method DELETE \
+            -H "Accept: application/vnd.github+json" \
+            /repos/${{ github.repository }}/actions/artifacts/${{ needs.build.outputs.artifact-id }}
