--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -66,4 +66,4 @@ jobs:
         if: github.event_name != 'pull_request' && steps.vars.outputs.is_release != 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release create "${{ steps.vars.outputs.tag_name }}" "${{ env.hen-bin }}" --target ${{ github.sha }} -t "\`${{ steps.vars.outputs.tag_name }}\`" -p
+        run: gh release create "${{ steps.vars.outputs.tag_name }}" "${{ env.hen-bin }}" --target ${{ github.sha }} -t "${{ steps.vars.outputs.tag_name }}" -p
