--- a/hen.ini
+++ b/hen.ini
@@ -1,18 +1,81 @@
 [HEN]
+; Enable exploit fixes - attempts to repatch bad/missing patches that should
+; have been made by the exploit. This helps ensure system stability after
+; the initial jailbreak process.
+; Values: 0 = disabled, 1 = enabled
+; Default: 0
+exploit_fixes = 0
+
+; Enable memory mapping patches for decrypting binary files. These patches
+; allow the system to properly handle encrypted executables and libraries.
+; Values: 0 = disabled, 1 = enabled
+; Default: 1
+mmap_patches = 1
+
+; Block console firmware updates by unmounting the `/update` partition.
+; This prevents accidental firmware updates that could patch the exploits.
+; Values: 0 = allow updates, 1 = block updates
+; Default: 1
+block_updates = 1
+
 ; Disable userland ASLR (Address Space Layout Randomization)
-; Set to 1 to disable ASLR for userland applications
-; Set to 0 to leave ASLR enabled (default system behavior)
+; ASLR randomizes memory addresses to prevent exploitation. Disabling it
+; can improve compatibility with homebrew applications, debuggers, and cheats.
+; Values: 0 = keep ASLR enabled, 1 = disable ASLR
 ; Default: 1
 disable_aslr = 1
 
-; NoBD patches
-; Set to 1 to apply NoBD patches (allows updates with the NoBD toolkit)
-; Set to 0 to skip applying NoBD patches
+; NoBD (No Blu-ray Drive) patches - allows system updates without a working
+; Blu-ray drive.
+; Values: 0 = skip NoBD patches, 1 = apply NoBD patches
 ; Default: 0
 nobd_patches = 0
 
-; Target ID spoofer
-; Set to a valid value to spoof the console's Target ID (for development or region spoofing)
-; Valid values: 0 (no spoof), 0x80-0x82(development hardware), 0x83–0x8F (region codes), 0xA0 (arcade cabinet)
-; Default: 0 (no spoof)
+; Target ID spoofer - changes the console's reported Target ID for development
+; or region-specific functionality.
+;
+; Valid Target IDs:
+;   0x80 = Diagnostic
+;   0x81 = Devkit
+;   0x82 = Testkit
+;   0x83 = Japan
+;   0x84 = USA
+;   0x85 = Europe
+;   0x86 = Korea
+;   0x87 = United Kingdom
+;   0x88 = Mexico
+;   0x89 = Australia & New Zealand
+;   0x8A = South Asia
+;   0x8B = Taiwan
+;   0x8C = Russia
+;   0x8D = China
+;   0x8E = Hong Kong
+;   0x8F = Brazil
+;   0xA0 = Kratos (Arcade Cabinet)
+;
+; Values: 0 = no spoofing, or valid hex Target ID (e.g., 0x84)
+; Default: 0
 target_id = 0
+
+; Skip applying SceShellCore, SceShellUI, and RemotePlay patches
+; Useful for testkit users
+; Values: 0 = apply patches, 1 = skip patches
+; Default: 0
+skip_patches = 0
+
+; Write the default HEN plugin PRX files to the console's hard drive.
+; This option controls whether the built-in HEN plugin files (PRX modules) are
+; automatically written to the system's internal storage during initialization.
+; Enabling this is recommended for first-time setup.
+; Values: 0 = don't write plugins, 1 = write plugins to HDD
+; Default: 0
+upload_prx = 0
+
+; Enable HEN plugin file loading and execution system
+; This feature activates the plugin subsystem that allows loading of additional
+; PRX modules to extend HEN's capabilities. Plugins can provide homebrew support,
+; game patching, system modifications, and other advanced features. When enabled,
+; HEN will scan for and load compatible plugin files from the system storage.
+; Values: 0 = do not enable plugins, 1 = enable plugins
+; Default: 0
+enable_plugins = 0
