Check version field

--- a/hen.ini
+++ b/hen.ini
@@ -1,4 +1,8 @@
 [HEN]
+; Config version - Changing this value will trigger a settings file overwrite.
+; If this field doesn't exist prior, this settings file will be written.
+config_version = 1
+
 ; Enable exploit fixes - attempts to repatch bad/missing patches that should
 ; have been made by the exploit. This helps ensure system stability after
 ; the initial jailbreak process.
